--- a/app/src/main/res/layout-land/activity_phone_dialer.xml
+++ b/app/src/main/res/layout-land/activity_phone_dialer.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:rowCount="3"
+        android:rowCount="4"
         android:columnCount="5">
 
         <ImageButton
@@ -141,6 +141,15 @@
             android:layout_row="2"
             android:layout_column="4"
             android:src="@drawable/hangup" />
+
+        <ImageButton
+            android:id="@+id/contacts_image_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:src="@drawable/contacts" />
 
     </GridLayout>
 
