--- a/app/src/main/res/layout/activity_phone_dialer.xml
+++ b/app/src/main/res/layout/activity_phone_dialer.xml
@@ -142,6 +142,15 @@
             android:layout_column="2"
             android:src="@drawable/hangup" />
 
+        <ImageButton
+            android:id="@+id/contacts_image_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="5"
+            android:layout_column="1"
+            android:src="@drawable/contacts" />
+
     </GridLayout>
 
 </LinearLayout>
